[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "mpylab"
dynamic = ["version"]
depandencies = [
	"bidict",
	"getch; sys_platform == 'linux' or sys_platform == 'darwin'",
	"gpib-ctypes",
	"Levenshtein",
	"msvcrt; sys_platform == 'windows'",
	"numpy",
        "ply",
        "pydot",
	"pyparsing",
	"pyserial",
	"pyusb",
	"pyvisa",
	"pyvisa-py",
	"scipy",
	"simpleeval",
	"matplotlib"
]
requires-python = ">= 3.8"
authors = [
  {name = "Hans Georg Krauthäuser", email = "hgk@ieee.org"}
]
maintainers = [
  {name = "Hans Georg Krauthäuser", email = "hgk@ieee.org"}
]
description = "A framework to simplify development of measurement 'scripts' for measurements in laboratories over e.g pyvisa."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["pyvisa", "gpib", "measurements", "laboratory"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: engineers, physicist",
  "Topic :: Laboratory Measurements",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Repository = "https://github.com/hgkdd/Mpy"

[project.optional-dependencies]
	gui = ["PySide6"]





